// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`output attributes 1`] = `
  () => <div className="element_7nq" />;
  css(\`
  	.element_7nq {
  		background: red;
  	}
  \`);
`;

exports[`output style of same name 1`] = `
  () => <div className="element_7nq">Hello World</div>;
  css(\`
  	.element_7nq {
  		margin-left: 20px;
  		margin-right: 20px;
  	}
  \`);
`;
